5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1667_2326.log
== TEST (2019-04-16 16:07:47) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
velocidade = float(input("qual a velocidade ?"))
 if ()
-- ERROR:
File "XXXX", line 2
    velocidade = float(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:56) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
velocidade = (input("qual a velocidade ?"))
 if ()
-- ERROR:
File "XXXX", line 2
    velocidade = (input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:05) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
velocidade = int (input("qual a velocidade ?"))
 if ()
-- ERROR:
File "XXXX", line 2
    velocidade = int (input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:12) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
velocidade = int(input("qual a velocidade ?"))
 if ()
-- ERROR:
File "XXXX", line 2
    velocidade = int(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:26) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
velocidade = int(input("qual a velocidade ?"))
Gina=3.7654
Harry=2.3479

-- ERROR:
File "XXXX", line 2
    velocidade = int(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:36) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
velocidade = float(input("qual a velocidade ?"))
Gina=3.7654
Harry=2.3479

-- ERROR:
File "XXXX", line 2
    velocidade = float(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:43) 
-- CODE:
nome = float(input("escreva o nome do bruxo : ")
velocidade = float(input("qual a velocidade ?"))
Gina=3.7654
Harry=2.3479

-- ERROR:
File "XXXX", line 2
    velocidade = float(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:32) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
velocidade = float(input("qual a velocidade ?"))
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
  mensagem = "nome do bruxo e Gina"
else:
  mensagem = "nome do bruxo e Harry "
print(mensagem)

-- ERROR:
File "XXXX", line 2
    velocidade = float(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:50) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
  mensagem = "nome do bruxo e Gina"
else:
  mensagem = "nome do bruxo e Harry "
print(mensagem)

-- ERROR:
File "XXXX", line 2
    Gina=3.7654
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:43) 
-- CODE:
nome = int(input("escreva o nome do bruxo : ")
Gina=3.7654
Harry=2.3479

-- ERROR:
File "XXXX", line 2
    Gina=3.7654
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:54) 
-- CODE:
nome = input("escreva o nome do bruxo : ")
Gina=3.7654
Harry=2.3479

-- ERROR:
File "XXXX", line 2
    Gina=3.7654
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:42) 
-- CODE:
nome = input("escreva o nome do bruxo : ")
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
  mensagem = "nome do bruxo e Gina"
else:
  mensagem = "nome do bruxo e Harry "
print(mensagem)

-- OUTPUT:
nome do bruxo e Gina
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:25:52) 
-- CODE:
nome = input("escreva o nome do bruxo : ")
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
  mensagem = "nome do bruxo e Gina"
else:
  mensagem = "nome do bruxo e Harry "
print(mensagem)

-- EXECUTION TIME:
0.135146
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
nome do bruxo e Gina
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
nome do bruxo e Gina
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:11) 
-- CODE:
nome = input("escreva o nome do bruxo : ")
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
  mensagem = "nome do bruxo e Gina"
else:
  mensagem = "nome do bruxo e Harry "
print(mensagem)

-- OUTPUT:
nome do bruxo e Gina
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:28) 
-- CODE:
nome = input("escreva o nome do bruxo : ")
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
  mensagem = "nome do bruxo e Gina"
else:
  mensagem = "nome do bruxo e Harry "
print(mensagem)

-- OUTPUT:
nome do bruxo e Gina
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:37) 
-- CODE:
nome = float(input("escreva o nome do bruxo : ")
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
  mensagem = "nome do bruxo e Gina"
else:
  mensagem = "nome do bruxo e Harry "
print(mensagem)

-- ERROR:
File "XXXX", line 2
    Gina=3.7654
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:07) 
-- CODE:
nome = float(input("escreva o nome do bruxo : "))
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
   mensagem = "nome do bruxo e Gina"
else:
   mensagem = "nome do bruxo e Harry "
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:19) 
-- CODE:
nome = float(input("escreva o nome do bruxo : "))
Gina=3.7654
Harry=2.3479
if (Gina ==3.7654):
   mensagem = "nome do bruxo e Gina"
else:
   mensagem = "nome do bruxo e Harry "
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:32) 
-- CODE:
nome = float(input("escreva o nome do bruxo : "))
Gina=61133
Harry=6463
if (Gina ==61133):
   mensagem = "nome do bruxo e Gina"
else:
   mensagem = "nome do bruxo e Harry "
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:42) 
-- CODE:
nome = float(input("escreva o nome do bruxo : "))
Gina=61133
Harry=6463
if (Gina ==61133):
   mensagem = "nome do bruxo e Gina"
else:
   mensagem = "nome do bruxo e Harry "
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:06) 
-- CODE:
nome = float(input("escreva o nome do bruxo : "))
Gina=61133
Harry=6463
if (Gina ==61133):
   mensagem = "nome do bruxo e"

print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:03) 
-- CODE:
nome = float(input("escreva o nome do bruxo : "))
Gina=61133
Harry=6463(Gina ==61133):
mensagem = "nome do bruxo e"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    Harry=6463(Gina ==61133):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:19) 
-- CODE:
nome = float(input("escreva o nome do bruxo : "))
Gina=61133
Harry=6463
mensagem = "nome do bruxo e"

print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:35) 
-- CODE:
nome = float(input("escreva o nome do bruxo : ")).upper()
Gina=61133
Harry=6463
mensagem = "nome do bruxo e"

print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input()).upper()
ValueError: could not convert string to float: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:53) 
-- CODE:
nome = float(input("escreva o nome do bruxo : ")).upper()
Gina=61133
Harry=6463
mensagem = "nome do bruxo e"

print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input()).upper()
ValueError: could not convert string to float: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
